# plonky2-aes

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: clippy.yml  typos.toml
aes-gcm/: Cargo.toml  README.md
aes-gcm/examples/: aes_gcm_128.rs  aes_gcm_256.rs
aes-gcm/src/: circuit_aes.rs  circuit_gcm.rs  constants.rs  lib.rs  native_aes.rs  native_gcm.rs
ecgfp5/: Cargo.toml
ecgfp5/src/: circuit.rs  elgamal.rs  hashed_elgamal.rs  lib.rs
ecgfp5/src/elgamal/: circuit.rs
ecgfp5/src/hashed_elgamal/: circuit.rs
examples/: aes_gcm_128.rs  aes_gcm_256.rs
feistel/: Cargo.toml
feistel/src/: circuit.rs  lib.rs
poseidon-cipher/: Cargo.toml
poseidon-cipher/src/: circuit.rs  lib.rs
src/: circuit.rs  circuit_aes.rs  circuit_gcm.rs  constants.rs  lib.rs  native.rs  native_aes.rs  native_gcm.rs
