[workspace]
members = [
    "aes-gcm",
    "ecgfp5",
    "feistel",
    "poseidon-cipher"
]

resolver = "2"

[workspace.dependencies]
plonky2 = { git = "https://github.com/0xPARC/plonky2.git", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }
anyhow = "1.0.56"
pod2 = { git = "https://github.com/0xPARC/pod2", rev = "cdf227e3530247e07e375daed007cae7d443b4ae" }
