[package]
name = "plonky2-poseidon-cipher"
version = "0.1.0"
edition = "2024"

[dependencies]
plonky2 = { git = "https://github.com/0xPARC/plonky2.git", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }
anyhow = "1.0.56"
# plonky2 = { workspace = true }
# anyhow = { workspace = true }
num = { version = "0.4.3", features = ["num-bigint"] }
pod2 = { git = "https://github.com/0xPARC/pod2", rev = "cdf227e3530247e07e375daed007cae7d443b4ae" } # for ecgfp5
num-bigint = { version = "0.4.6", features = ["rand"] }
rand = "0.8.5"

[dev-dependencies]
